HelloUltraviolet/Fixtures/AcceptedProjects/PtrNullReturn/Source/Library.uv
//! Accepted project fixture for checking Ptr::null() against a safe pointer return type.

public procedure ptrNullReturnReference() -> Ptr<i32> {
    return Ptr::null()
}
