HelloUltraviolet/Fixtures/RejectedSource/Modules/UsingListDuplicate/Source/Main.uv
//! Rejected using declaration specimen for duplicate names in a using list.

using UsingListDuplicate::Provider::{ exportedValue, exportedValue }

public procedure usingListDuplicateReference() -> i32 {
    return 1
}
